Completed UI for RPS game
minor bug/inconvenience regarding final score updation
after restarting game

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors!</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="rps_game.js" defer></script>
 </head>
+
 <body>
-    <script src="game.js"></script>
+    <h1>Rock Paper Scissors</h1>
+    <div class="container">
+        <div class="inputs">
+            <p class="select_text">Choose your option</p>
+            <div><img class='rock' src='./images/rock_img.jpg'>
+                <p>Rock</p>
+            </div>
+            <div><img class='paper' src='./images/paper_img.jpg'>
+                <p>Paper</p>
+            </div>
+            <div><img class='scissors' src='./images/scissors_img.webp'>
+                <p>Scissors</p>
+            </div>
+        </div>
+        <div class="output"><span>Results Page</span></div>
+    </div>
 </body>
+
 </html>
